v2: avoid icons flickering

--- a/src/v2/v2.css
+++ b/src/v2/v2.css
@@ -209,7 +209,7 @@ body:has(.modal.full:target, .modal.full :target) {overflow:hidden;}
 .modal {position:fixed;z-index:130;overflow:auto;}
   .modal:not(.full) {min-height:10rem;max-height:90dvh;min-width:18rem;max-width:90vw;inset:50% auto auto 50%;transform:translate(-50%,-50%);}
   .modal.full {inset:0;/*calc(5 * var(--gap));*/}
-a:has(img:target), ul.row li {-webkit-tap-highlight-color:transparent;}
+a:has(img:target), ul.row li, [class*="icon-"] {-webkit-tap-highlight-color:transparent;}
 img:target {position:absolute;display:block;inset:0;width:100%;height:100%;object-fit:contain;}
 
 /* drawer */
